--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+  margin: 20px;
+  padding: 0;
+}
+
+.input-data {
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #000000;
+}
+
+.character-data {    
+  display: inline-block;
+  margin: 2px;
+}
+
+.cycle-data {
+  display: inline-block;
+  border: 1px solid #000000;
+	font-weight: bold;
+	margin-left: 16px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.cycle-input {
+	display: block;
+	margin: 0 auto;
+	margin-top: 4px;
+	width: 40px;
+	height: 40px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.character-icon {
+  background: #ffffff;
+  border: 1px solid #000000;
+  height: 64px;
+  width: 64px;
+  padding: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.speed-input {
+  height: 32px;
+  width: 64px;
+  padding: 0;
+  text-align: center;
+  margin-top: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.team-data {
+  height: fit-content;
+  width: fit-content;
+  border: 1px solid #000000;
+  display: inline-block;
+}
+
+.turn-data {
+  background: #ffffff;
+  border: 1px solid #000000;
+  height: 64px;
+  width: 64px;
+  padding: 0;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+}
+
+.action-value {
+	display: flex;
+  height: 24px;
+  width: 64px;
+  border: 1px solid #000000;
+  padding: 0;
+  text-align: center;
+	margin-bottom: 8px;
+	margin-top: -1px;
+	font-size: small;
+	align-items: center;
+	justify-content: center;
 }
